--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import "core/variables";
-@import "core/fonts";
 @import "core/reset";
+@import "core/mixins";
 @import "components/code";
 @import "components/links";
 @import "layout/page";
