--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,8 +1,11 @@
 // fonts
-$font-main: "Roboto", sans-serif;
-$font-titles-home: "Kiwi Maru", serif;
+$font-title: "Kiwi Maru", serif;
+$font-label: "Kiwi Maru", serif;
 $font-footer: "Kiwi Maru", serif;
+$font-text: "Open Sans", sans-serif;
+$font-button: "Open Sans", sans-serif;
+$font-menu: "Open Sans", sans-serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$color-text: rgb(128, 128, 128);
+$color-footer-ab-pr: rgb(21, 218, 208);
