--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,42 +1,29 @@
 .page-about {
+  // background-image: linear-gradient(
+  //     rgba(255, 255, 255, 0.4),
+  //     rgba(255, 255, 255, 0.4)
+  //   ),
+  //   url("../images/nat-about.png");
   background-image: linear-gradient(
       rgba(255, 255, 255, 0.4),
       rgba(255, 255, 255, 0.4)
     ),
-    url("../images/nat-about.png");
+    url("../images/nat-about-max.png");
   background-color: rgb(253, 250, 250);
-  background-size: 100%;
+  background-size: 80%;
   background-repeat: no-repeat;
   @media all and (min-width: 600px) {
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.4),
-        rgba(255, 255, 255, 0.4)
-      ),
-      url("../images/nat-about-max.png");
-    background-color: rgb(253, 250, 250);
     background-size: 75%;
   }
   @media all and (min-width: 768px) {
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.4),
-        rgba(255, 255, 255, 0.4)
-      ),
-      url("../images/nat-about-max.png");
-    background-color: rgb(253, 250, 250);
     background-size: 70%;
   }
   @media all and (min-width: 1200px) {
-    background-image: linear-gradient(
-        rgba(255, 255, 255, 0.4),
-        rgba(255, 255, 255, 0.4)
-      ),
-      url("../images/nat-about-max.png");
-    background-color: rgb(253, 250, 250);
     background-size: 30%;
   }
 }
 .about {
-  margin: 400px 0 40px 20px;
+  margin: 340px 0 40px 20px;
   border-width: 3px;
   border-style: solid;
   border-right: 0;
@@ -48,7 +35,6 @@
   }
   @media all and (min-width: 768px) {
     margin: 550px 80px 80px 80px;
-    border-width: 5px;
   }
   @media all and (min-width: 1366px) {
     margin: 120px 80px 60px 450px;
@@ -57,10 +43,7 @@
     margin: 180px 260px 0 600px;
   }
   &__title {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
+    @include flexRowFlexStart();
     padding: 0 0 0 13px;
     margin-top: -20px;
     @media all and (min-width: 600px) {
@@ -72,9 +55,6 @@
     }
     @media all and (min-width: 1366px) {
       margin-top: -25px;
-    }
-    @media all and (min-width: 1920px) {
-      padding: 0 0 0 30px;
     }
     &--h1 {
       font-family: "Kiwi Maru", serif;
@@ -95,120 +75,23 @@
       font-weight: 800;
       color: rgb(21, 218, 208);
       -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
       padding: 0 7px 7px 0;
       @media all and (min-width: 1366px) {
         font-size: 50px;
       }
     }
   }
-  &__cv {
-    width: 110px;
-    height: 38px;
-    background-color: rgb(226, 175, 128);
-    border-radius: 8px;
-    border-style: none;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
-    font-family: "Open Sans", sans-serif;
-    font-size: 17px;
-    font-weight: 600;
-    letter-spacing: 2px;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    list-style-type: none;
-    padding: 0 0 3px 0;
-    margin: 0 25px 18px 15px;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.07);
-    }
-    @media all and (min-width: 600px) {
-      margin: 0 0 16px 18px;
-    }
-    @media all and (min-width: 768px) {
-      width: 130px;
-      height: 50px;
-      font-size: 20px;
-      margin: 0 0 15px 30px;
-    }
-    @media all and (min-width: 1366px) {
-      width: 120px;
-      height: 35px;
-      font-size: 17px;
-      margin: 0 0 10px 30px;
-    }
-  }
   &__text {
-    font-family: "Open Sans", sans-serif;
+    font-family: $font-text;
     font-size: 18px;
-    color: grey;
+    color: $color-text;
     padding: 0 45px 0 13px;
     line-height: 30px;
     &--adaLink {
       color: rgb(21, 218, 208);
       font-weight: 600;
     }
-    @media all and (min-width: 600px) {
-      padding: 0 0 0 18px;
-    }
-    @media all and (min-width: 768px) {
-      font-size: 20px;
-      line-height: 35px;
-      padding: 0 0 0 30px;
-    }
-    @media all and (min-width: 1366px) {
-      font-size: 18px;
-      line-height: 35px;
-      padding: 0 150px 0 30px;
-    }
-    @media all and (min-width: 1920px) {
-    }
-  }
-  &__soft {
-    font-family: "Kiwi Maru", serif;
-    font-size: 20px;
-    color: rgb(226, 175, 128);
-    padding: 15px 5px 8px 13px;
-    @media all and (min-width: 600px) {
-      padding: 20px 0 16px 18px;
-    }
-    @media all and (min-width: 768px) {
-      font-size: 22px;
-      padding: 20px 0 16px 30px;
-    }
-    &--text {
-      font-family: "Open Sans", sans-serif;
-      font-size: 15px;
-      color: grey;
-      padding: 0 45px 8px 13px;
-      line-height: 20px;
-      @media all and (min-width: 600px) {
-        padding: 2px 0 16px 18px;
-      }
-      @media all and (min-width: 768px) {
-        font-size: 20px;
-        padding: 20px 0 16px 30px;
-      }
-    }
-  }
-  &__wishlist {
-    font-family: "Kiwi Maru", serif;
-    font-size: 20px;
-    color: rgb(226, 175, 128);
-    padding: 15px 5px 8px 13px;
-    @media all and (min-width: 600px) {
-      padding: 20px 0 16px 18px;
-    }
-    @media all and (min-width: 768px) {
-      font-size: 22px;
-      padding: 20px 0 16px 30px;
-    }
-  }
-  &__pd {
-    font-family: "Open Sans", sans-serif;
-    font-size: 18px;
-    color: grey;
-    padding: 0 45px 0 13px;
-    line-height: 30px;
     &--cv {
       color: rgb(21, 218, 208);
       font-weight: 600;
@@ -226,7 +109,32 @@
       line-height: 35px;
       padding: 0 150px 0 30px;
     }
-    @media all and (min-width: 1920px) {
+  }
+  &__soft {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: rgb(226, 175, 128);
+    padding: 15px 5px 8px 13px;
+    @media all and (min-width: 600px) {
+      padding: 20px 0 16px 18px;
+    }
+    @media all and (min-width: 768px) {
+      font-size: 22px;
+      padding: 20px 0 16px 30px;
+    }
+    &--text {
+      font-family: $font-text;
+      font-size: 15px;
+      color: $color-text;
+      padding: 0 45px 8px 13px;
+      line-height: 20px;
+      @media all and (min-width: 600px) {
+        padding: 2px 0 16px 18px;
+      }
+      @media all and (min-width: 768px) {
+        font-size: 20px;
+        padding: 20px 0 16px 30px;
+      }
     }
   }
   &__arrow {
@@ -240,8 +148,6 @@
     flex-direction: row;
     justify-content: flex-end;
     margin-right: 20px;
-    text-decoration: none;
-    list-style-type: none;
     &:hover {
       transform: scale(1.07);
       color: rgb(226, 175, 128);
@@ -296,10 +202,10 @@
       padding: 15px 5px 8px 30px;
     }
     &--layout {
-      font-family: "Open Sans", sans-serif;
+      font-family: $font-text;
       font-size: 18px;
       text-transform: uppercase;
-      color: grey;
+      color: $color-text;
       @media all and (min-width: 600px) {
       }
       @media all and (min-width: 768px) {
@@ -315,10 +221,10 @@
       }
     }
     &--languages {
-      font-family: "Open Sans", sans-serif;
+      font-family: $font-text;
       font-size: 18px;
       text-transform: uppercase;
-      color: grey;
+      color: $color-text;
       @media all and (min-width: 600px) {
         //font-size: 18px;
         // padding: 2px 0 16px 18px;
@@ -338,10 +244,10 @@
       }
     }
     &--framework {
-      font-family: "Open Sans", sans-serif;
+      font-family: $font-text;
       font-size: 18px;
       text-transform: uppercase;
-      color: grey;
+      color: $color-text;
       @media all and (min-width: 600px) {
         //font-size: 18px;
         // padding: 2px 0 16px 18px;
@@ -361,10 +267,10 @@
       }
     }
     &--version {
-      font-family: "Open Sans", sans-serif;
+      font-family: $font-text;
       font-size: 18px;
       text-transform: uppercase;
-      color: grey;
+      color: $color-text;
       @media all and (min-width: 600px) {
         //font-size: 18px;
         // padding: 2px 0 16px 18px;
@@ -455,4 +361,46 @@
 .about__wrapper {
   display: flex;
   flex-direction: row;
+}
+.circle-container {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  //padding: 2.8em;
+  //border: dashed 1px;
+  border-radius: 50%;
+  margin: 68px 0 47px 76px;
+}
+.circle-container p {
+  display: block;
+  position: absolute;
+  top: 39%;
+  left: 25%;
+  // width: 4em;
+  // height: 4em;
+  // margin: -2em;
+}
+.center {
+  font-family: "Kiwi Maru", serif;
+  font-size: 30px;
+  font-weight: 600;
+  color: rgb(226, 175, 128);
+}
+.deg0 {
+  transform: translate(109px);
+}
+.deg45 {
+  transform: rotate(45deg) translate(-91px) rotate(-45deg);
+}
+.deg135 {
+  transform: rotate(135deg) translate(-93px) rotate(-135deg);
+}
+.deg180 {
+  transform: translate(-110px);
+}
+.deg225 {
+  transform: rotate(225deg) translate(-109px) rotate(-225deg);
+}
+.deg315 {
+  transform: rotate(315deg) translate(-87px) rotate(-315deg);
 }
