--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -66,6 +66,9 @@
         font-size: 45px;
       }
       @media all and (min-width: 1366px) {
+        font-size: 45px;
+      }
+      @media all and (min-width: 1920px) {
         font-size: 50px;
       }
     }
@@ -78,6 +81,9 @@
       -moz-transform: rotate(90deg);
       padding: 0 7px 7px 0;
       @media all and (min-width: 1366px) {
+        font-size: 45px;
+      }
+      @media all and (min-width: 1920px) {
         font-size: 50px;
       }
     }
@@ -110,31 +116,268 @@
       padding: 0 150px 0 30px;
     }
   }
-  &__soft {
-    font-family: "Kiwi Maru", serif;
-    font-size: 20px;
+  &__tech {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 151px 0 0 52px;
+    font-family: $font-text;
+    font-size: 15px;
     color: rgb(226, 175, 128);
-    padding: 15px 5px 8px 13px;
+    line-height: 20px;
     @media all and (min-width: 600px) {
-      padding: 20px 0 16px 18px;
+      margin: 180px 0 0 120px;
     }
     @media all and (min-width: 768px) {
-      font-size: 22px;
-      padding: 20px 0 16px 30px;
+      margin: 180px 0 0 170px;
     }
-    &--text {
-      font-family: $font-text;
-      font-size: 15px;
-      color: $color-text;
-      padding: 0 45px 8px 13px;
-      line-height: 20px;
+    @media all and (min-width: 1366px) {
+      margin: 150px 0 0 70px;
+    }
+    @media all and (min-width: 1920px) {
+      margin: 168px 150px 0 100px;
+    }
+    .deg0_ {
+      transform: rotate(30deg) translate(-45px) rotate(-30deg);
       @media all and (min-width: 600px) {
-        padding: 2px 0 16px 18px;
       }
       @media all and (min-width: 768px) {
-        font-size: 20px;
-        padding: 20px 0 16px 30px;
       }
+      @media all and (min-width: 1366px) {
+        transform: rotate(3deg) translate(-37px) rotate(-3deg);
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(6deg) translate(-30px) rotate(-6deg);
+      }
+    }
+    .deg40 {
+      transform: rotate(40deg) translate(-119px) rotate(-40deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(50deg) translate(-120px) rotate(-50deg);
+      }
+    }
+    .deg80 {
+      transform: rotate(58deg) translate(-151px) rotate(-58deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(70deg) translate(-135px) rotate(-70deg);
+      }
+    }
+    .deg120 {
+      transform: rotate(120deg) translate(-227px) rotate(-120deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(135deg) translate(-240px) rotate(-135deg);
+      }
+    }
+    .deg160 {
+      transform: rotate(134deg) translate(-189px) rotate(-134deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(145deg) translate(-170px) rotate(-145deg);
+      }
+    }
+    .deg200 {
+      transform: rotate(141deg) translate(-97px) rotate(-141deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(155deg) translate(-225px) rotate(-155deg);
+      }
+    }
+    .deg240 {
+      transform: rotate(99deg) translate(-49px) rotate(-99deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(140deg) translate(-85px) rotate(-140deg);
+      }
+    }
+    .deg280 {
+      transform: rotate(332deg) translate(45px) rotate(-332deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(90deg) translate(-145px) rotate(-90deg);
+      }
+    }
+    .deg320 {
+      transform: rotate(320deg) translate(82px) rotate(-320deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        transform: rotate(87deg) translate(-115px) rotate(-87deg);
+      }
+    }
+    &.about__tech p {
+      display: block;
+      position: absolute;
+      top: -4%;
+      left: 19%;
+    }
+    &--center_ {
+      font-family: "Kiwi Maru", serif;
+      font-size: 20px;
+      font-weight: 600;
+      color: $color-text;
+      //color: rgb(21, 218, 208);
+      text-align: center;
+      text-transform: uppercase;
+      transform: translate(15px);
+    }
+    &--icons {
+      display: inline-block;
+      font-size: 40px;
+      padding: 10px;
+      align-content: center;
+      text-align: center;
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        //font-size: 70px;
+      }
+      @media all and (min-width: 1920px) {
+        font-size: 50px;
+      }
+    }
+    .fa-html5 {
+      color: rgb(255, 0, 0);
+    }
+    .fa-css3-alt {
+      color: rgb(24, 117, 238);
+    }
+    .fa-sass {
+      color: rgb(238, 24, 113);
+    }
+    .fa-bootstrap {
+      color: rgb(76, 0, 255);
+    }
+    .fa-js-square {
+      color: rgb(243, 247, 18);
+    }
+    .fa-node {
+      color: rgb(54, 216, 39);
+    }
+    .fa-gulp {
+      color: rgb(212, 34, 72);
+    }
+    .fa-react {
+      color: rgb(0, 255, 242);
+    }
+    .fa-git-alt {
+      color: rgb(255, 123, 0);
+    }
+  }
+  &__soft {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 0 0 47px 76px;
+    font-family: $font-text;
+    font-size: 15px;
+    font-weight: 600;
+    color: rgb(226, 175, 128);
+    line-height: 20px;
+    @media all and (min-width: 600px) {
+      margin: 0 0 0 150px;
+    }
+    @media all and (min-width: 768px) {
+      margin: 0 0 0 200px;
+    }
+    @media all and (min-width: 1366px) {
+      margin: 60px 100px 0 200px;
+    }
+    @media all and (min-width: 1920px) {
+      margin: 80px 100px 0 100px;
+      font-size: 18px;
+    }
+    .deg0 {
+      transform: translate(109px);
+    }
+    .deg45 {
+      transform: rotate(45deg) translate(-106px) rotate(-45deg);
+    }
+    .deg135 {
+      transform: rotate(135deg) translate(-85px) rotate(-135deg);
+    }
+    .deg180 {
+      transform: translate(-110px);
+    }
+    .deg225 {
+      transform: rotate(225deg) translate(-109px) rotate(-225deg);
+    }
+    .deg315 {
+      transform: rotate(315deg) translate(-125px) rotate(-315deg);
+      @media all and (min-width: 600px) {
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        transform: rotate(315deg) translate(-106px) rotate(-315deg);
+      }
+      @media all and (min-width: 1920px) {
+      }
+    }
+    &.about__soft p {
+      display: block;
+      position: absolute;
+      top: 39%;
+      left: 25%;
+    }
+    &--center {
+      font-family: "Kiwi Maru", serif;
+      font-size: 20px;
+      font-weight: 600;
+      color: rgb(21, 218, 208);
+      text-align: center;
+      text-transform: uppercase;
     }
   }
   &__arrow {
@@ -158,7 +401,7 @@
       bottom: 165px;
     }
     @media all and (min-width: 1366px) {
-      margin-right: 180px;
+      margin-right: 130px;
       bottom: 180px;
     }
     @media all and (min-width: 1920px) {
@@ -166,301 +409,19 @@
     }
   }
 }
-.stack {
-  &__title {
-    font-family: "Kiwi Maru", serif;
-    font-size: 20px;
-    color: rgb(226, 175, 128);
-    padding: 10px 5px 8px 13px;
-    @media all and (min-width: 600px) {
-      font-size: 22px;
-      padding: 20px 0 16px 18px;
-    }
-    @media all and (min-width: 768px) {
-      padding: 20px 0 16px 30px;
-    }
-    @media all and (min-width: 1366px) {
-    }
-    @media all and (min-width: 1920px) {
-      padding-top: 30px;
-    }
+.wrapper-tech-soft {
+  @media all and (min-width: 600px) {
   }
-  &__grid {
-    padding: 15px 5px 8px 13px;
-    @media all and (min-width: 600px) {
-    }
-    @media all and (min-width: 768px) {
-    }
-    @media all and (min-width: 1366px) {
-      display: grid;
-      grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
-      grid-template-rows: 1fr, 1fr, 1fr;
-      padding: 15px 5px 8px 30px;
-      width: 900px;
-    }
-    @media all and (min-width: 1920px) {
-      padding: 15px 5px 8px 30px;
-    }
-    &--layout {
-      font-family: $font-text;
-      font-size: 18px;
-      text-transform: uppercase;
-      color: $color-text;
-      @media all and (min-width: 600px) {
-      }
-      @media all and (min-width: 768px) {
-      }
-      @media all and (min-width: 1366px) {
-        text-align: center;
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-      }
-      @media all and (min-width: 1920px) {
-        grid-column: 1 / 3;
-        grid-row: 1 / 2;
-      }
-    }
-    &--languages {
-      font-family: $font-text;
-      font-size: 18px;
-      text-transform: uppercase;
-      color: $color-text;
-      @media all and (min-width: 600px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 18px;
-      }
-      @media all and (min-width: 768px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 30px;
-      }
-      @media all and (min-width: 1366px) {
-        text-align: center;
-        grid-column: 3 / 5;
-        grid-row: 1 / 2;
-      }
-      @media all and (min-width: 1920px) {
-        grid-column: 3 / 5;
-        grid-row: 1 / 2;
-      }
-    }
-    &--framework {
-      font-family: $font-text;
-      font-size: 18px;
-      text-transform: uppercase;
-      color: $color-text;
-      @media all and (min-width: 600px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 18px;
-      }
-      @media all and (min-width: 768px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 30px;
-      }
-      @media all and (min-width: 1366px) {
-        text-align: center;
-        grid-column: 5 / 6;
-        grid-row: 1 / 2;
-      }
-      @media all and (min-width: 1920px) {
-        grid-column: 5 / 6;
-        grid-row: 1 / 2;
-      }
-    }
-    &--version {
-      font-family: $font-text;
-      font-size: 18px;
-      text-transform: uppercase;
-      color: $color-text;
-      @media all and (min-width: 600px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 18px;
-      }
-      @media all and (min-width: 768px) {
-        //font-size: 18px;
-        // padding: 2px 0 16px 30px;
-      }
-      @media all and (min-width: 1366px) {
-        text-align: center;
-        grid-column: 6 / 8;
-        grid-row: 1 / 2;
-      }
-      @media all and (min-width: 1920px) {
-        grid-column: 6 / 8;
-        grid-row: 1 / 2;
-      }
-    }
-    &--icons {
-      display: inline-block;
-      font-size: 40px;
-      padding: 10px;
-      align-content: center;
-      text-align: center;
-      @media all and (min-width: 600px) {
-        //padding: 0 0 16px 18px;
-      }
-      @media all and (min-width: 768px) {
-        // padding: 0 0 16px 30px;
-      }
-    }
+  @media all and (min-width: 768px) {
   }
-}
-.fa-html5 {
-  color: rgb(255, 0, 0);
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-.fa-css3-alt {
-  color: rgb(24, 117, 238);
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
-.fa-sass {
-  color: rgb(238, 24, 113);
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-}
-.fa-bootstrap {
-  color: rgb(76, 0, 255);
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-}
-.fa-js-square {
-  color: rgb(221, 224, 6);
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
-}
-.fa-node {
-  color: rgb(54, 216, 39);
-  grid-column: 4 / 5;
-  grid-row: 2 / 3;
-}
-.fa-gulp {
-  color: rgb(212, 34, 72);
-  grid-column: 3 / 5;
-  grid-row: 3 / 4;
-  text-align: center;
-}
-.fa-react {
-  color: rgb(0, 255, 242);
-  grid-column: 5 / 6;
-  grid-row: 2 / 3;
-}
-.fa-git-alt {
-  color: rgb(255, 123, 0);
-  grid-column: 6 / 7;
-  grid-row: 2 / 3;
-}
-.photoshop {
-  color: black;
-  font-size: 55px;
-  grid-column: 7 / 8;
-  grid-row: 2 / 3;
-  text-align: center;
-  margin-bottom: -10px;
-}
-.about__wrapper {
-  display: flex;
-  flex-direction: row;
-}
-.circle-container-tech {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin: 151px 0 0 52px;
-  font-family: $font-text;
-  font-size: 15px;
-  //color: $color-text;
-  color: rgb(226, 175, 128);
-  line-height: 20px;
-}
-.circle-container-tech p {
-  display: block;
-  position: absolute;
-  top: -4%;
-  left: 19%;
-}
-.center_ {
-  font-family: "Kiwi Maru", serif;
-  font-size: 20px;
-  font-weight: 600;
-  color: rgb(150, 149, 149);
-  //color: rgb(21, 218, 208);
-  text-align: center;
-  text-transform: uppercase;
-  transform: translate(3px);
-}
-.deg0_ {
-  transform: translate(-45px);
-}
-.deg40 {
-  transform: rotate(40deg) translate(-119px) rotate(-40deg);
-}
-.deg80 {
-  transform: rotate(58deg) translate(-151px) rotate(-58deg);
-}
-.deg120 {
-  transform: rotate(120deg) translate(-227px) rotate(-120deg);
-}
-.deg160 {
-  transform: rotate(134deg) translate(-189px) rotate(-134deg);
-}
-.deg200 {
-  transform: rotate(141deg) translate(-97px) rotate(-141deg);
-}
-.deg240 {
-  transform: rotate(99deg) translate(-49px) rotate(-99deg);
-}
-.deg280 {
-  transform: rotate(332deg) translate(45px) rotate(-332deg);
-}
-.deg320 {
-  transform: rotate(320deg) translate(82px) rotate(-320deg);
-}
-.circle-container {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  margin: 0 0 47px 76px;
-  font-family: $font-text;
-  font-size: 15px;
-  font-weight: 600;
-  color: rgb(226, 175, 128);
-  line-height: 20px;
-}
-.circle-container p {
-  display: block;
-  position: absolute;
-  top: 39%;
-  left: 25%;
-
-  // width: 4em;
-  // height: 4em;
-  // margin: -2em;
-}
-.center {
-  font-family: "Kiwi Maru", serif;
-  font-size: 20px;
-  font-weight: 600;
-  //color: rgb(226, 175, 128);
-  color: rgb(21, 218, 208);
-  text-align: center;
-  text-transform: uppercase;
-}
-.deg0 {
-  transform: translate(109px);
-}
-.deg45 {
-  transform: rotate(45deg) translate(-106px) rotate(-45deg);
-}
-.deg135 {
-  transform: rotate(135deg) translate(-85px) rotate(-135deg);
-}
-.deg180 {
-  transform: translate(-110px);
-}
-.deg225 {
-  transform: rotate(225deg) translate(-109px) rotate(-225deg);
-}
-.deg315 {
-  transform: rotate(315deg) translate(-125px) rotate(-315deg);
+  @media all and (min-width: 1366px) {
+    display: flex;
+    flex-direction: row;
+    //justify-content: center;
+  }
+  @media all and (min-width: 1920px) {
+    display: flex;
+    flex-direction: row;
+    //justify-content: center;
+  }
 }
