--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -5,7 +5,20 @@ $font-footer: "Kiwi Maru", serif;
 $font-text: "Open Sans", sans-serif;
 $font-button: "Open Sans", sans-serif;
 $font-menu: "Open Sans", sans-serif;
+$font-home: "Crimson Text", serif;
 
 // colors
+$main-color-blue: rgb(21, 218, 208);
+$main-color-orange: rgb(226, 175, 128);
 $color-text: rgb(128, 128, 128);
-$color-footer-ab-pr: rgb(21, 218, 208);
+$color-background-white: rgb(255, 255, 255);
+$color-menu-sect: rgb(226, 175, 128);
+$color-menu-hamb: rgb(21, 218, 208);
+$color-footer-blue: rgb(21, 218, 208);
+$color-footer-white: rgb(255, 255, 255);
+$color-title-about: rgb(21, 218, 208);
+$color-title-projects: rgb(226, 175, 128);
+$color-title-contact: rgb(255, 255, 255);
+$color-links: rgb(21, 218, 208);
+$color-links-hover: rgb(226, 175, 128);
+$color-font-white: rgb(255, 255, 255);
