--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,9 +1,7 @@
 .header {
   @include flexRow();
   @media all and (min-width: 1366px) {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    @include flexRowFlexEnd();
     background-color: transparent;
   }
   &__logo {
@@ -31,10 +29,10 @@
       left: 250px;
       top: 18px;
       display: inline-block;
-      font-family: "Kiwi Maru", serif;
+      font-family: $font-title;
       font-weight: 500;
       font-size: 25px;
-      color: rgb(21, 218, 208);
+      color: $color-menu-hamb;
       padding-right: 50px;
     }
     @media all and (min-width: 1920px) {
@@ -68,7 +66,7 @@
           padding: 8px 16px;
           font-family: $font-menu;
           font-size: 20px;
-          color: rgb(226, 175, 128);
+          color: $color-menu-sect;
           text-decoration: none;
           list-style-type: none;
         }
@@ -81,14 +79,12 @@
 }
 .page-contact .header {
   @include flexRow();
-  background-color: white;
+  background-color: $color-background-white;
   height: 80px;
   @media all and (min-width: 768px) {
   }
   @media all and (min-width: 1366px) {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    @include flexRowFlexEnd();
     height: 75px;
   }
   &__logo {
@@ -116,10 +112,10 @@
       left: 250px;
       top: 18px;
       display: inline-block;
-      font-family: "Kiwi Maru", serif;
+      font-family: $font-title;
       font-weight: 500;
       font-size: 25px;
-      color: rgb(21, 218, 208);
+      color: $color-menu-hamb;
       padding-right: 50px;
     }
     @media all and (min-width: 1920px) {
@@ -147,7 +143,7 @@
           padding: 8px 16px;
           font-family: $font-menu;
           font-size: 25px;
-          color: rgb(226, 175, 128);
+          color: $color-menu-sect;
         }
       }
     }
@@ -176,7 +172,7 @@
   }
 }
 .page-projects ._layer {
-  background: rgb(21, 218, 208);
+  background: $color-menu-hamb;
   margin-bottom: 4px;
   border-radius: 2px;
   width: 38px;
@@ -188,7 +184,7 @@
   transition: all 0.4s cubic-bezier(0.05, 1.04, 0.72, 0.98);
 }
 .page-contact ._layer {
-  background: rgb(21, 218, 208);
+  background: $color-menu-hamb;
   margin-bottom: 4px;
   border-radius: 2px;
   width: 38px;
@@ -200,7 +196,7 @@
   transition: all 0.4s cubic-bezier(0.05, 1.04, 0.72, 0.98);
 }
 .page-about ._layer {
-  background: rgb(21, 218, 208);
+  background: $color-menu-hamb;
   margin-bottom: 4px;
   border-radius: 2px;
   width: 38px;
@@ -233,7 +229,7 @@
   left: 20px;
   transform: translate3d(0px, -180%, 0px);
   z-index: 1001;
-  background-color: white;
+  background-color: $color-background-white;
   width: 180px;
   height: 218px;
   padding: 5px 0 0 15px;
@@ -244,6 +240,6 @@
 .header__nav ul li a {
   font-family: $font-menu;
   font-size: 20px;
-  color: rgb(226, 175, 128);
+  color: $color-menu-sect;
   line-height: 50px;
 }
