--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -1,5 +1,5 @@
 .page-contact {
-  background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
+  background-image: linear-gradient($main-color-blue, $main-color-orange 60%);
   background-repeat: no-repeat;
   width: 100vw;
   height: 100%;
@@ -36,7 +36,7 @@
     &--h1 {
       font-family: $font-title;
       font-size: 40px;
-      color: rgb(255, 255, 255);
+      color: $color-title-contact;
       text-transform: lowercase;
       padding: 0 5px 19px 0;
       @media all and (min-width: 1366px) {
@@ -50,7 +50,7 @@
       font-family: $font-title;
       font-size: 40px;
       font-weight: 800;
-      color: white;
+      color: $color-title-contact;
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
       padding: 0 7px 7px 0;
@@ -62,12 +62,44 @@
       }
     }
   }
+  .icons__wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 0 20px 20px;
+    .icons {
+      font-size: 30px;
+      color: $color-font-white;
+      padding-right: 20px;
+      &:hover {
+        transform: scale(1.07);
+      }
+      @media all and (min-width: 768px) {
+        font-size: 40px;
+        padding: 20px 20px 5px 12px;
+      }
+      @media all and (min-width: 1366px) {
+        font-size: 30px;
+        padding: 20px 20px 8px 12px;
+      }
+      @media all and (min-width: 1920px) {
+        font-size: 30px;
+      }
+    }
+  }
+  .contact__wrapper {
+    @media all and (min-width: 1366px) {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+  }
   &__label {
     display: block;
     font-family: $font-label;
     font-size: 20px;
     font-weight: 500;
-    color: white;
+    color: $color-font-white;
     text-transform: uppercase;
     padding: 13px 20px 5px 20px;
     @media all and (min-width: 768px) {
@@ -146,7 +178,7 @@
       font-family: $font-label;
       font-size: 20px;
       font-weight: 500;
-      color: white;
+      color: $color-font-white;
       text-transform: uppercase;
       padding: 13px 20px 5px 20px;
       @media all and (min-width: 768px) {
@@ -176,7 +208,7 @@
   &__btn {
     width: 140px;
     height: 38px;
-    background-color: rgb(21, 218, 208);
+    background-color: $main-color-blue;
     border-radius: 8px;
     border-style: none;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
@@ -184,7 +216,7 @@
     font-size: 17px;
     font-weight: 600;
     letter-spacing: 2px;
-    color: rgb(255, 255, 255);
+    color: $color-font-white;
     padding: 0 0 3px 0;
     margin: 8px 20px 0 20px;
     cursor: pointer;
@@ -195,7 +227,6 @@
       margin: 8px 20px 0 30px;
     }
     @media all and (min-width: 1366px) {
-      margin: 0 0 0 30px;
       width: 130px;
       height: 47px;
       font-size: 20px;
@@ -207,46 +238,5 @@
     &:hover {
       transform: scale(1.07);
     }
-  }
-}
-
-.icons__wrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0 0 20px 20px;
-  @media all and (min-width: 768px) {
-    margin: 0 0 20px 30px;
-  }
-  .icons {
-    font-size: 30px;
-    color: white;
-    padding-right: 20px;
-    &:hover {
-      transform: scale(1.07);
-    }
-    @media all and (min-width: 768px) {
-      font-size: 40px;
-      padding: 20px 20px 5px 0;
-    }
-    @media all and (min-width: 1366px) {
-      font-size: 25px;
-      padding: 20px 30px 8px 0;
-    }
-    @media all and (min-width: 1920px) {
-      font-size: 30px;
-    }
-  }
-}
-.contact__wrapper {
-  @media all and (min-width: 1366px) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  @media all and (min-width: 1920px) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
   }
 }
